Fix issue where whitespace was left under footer in tablet size screens

--- a/css/contact_us.css
+++ b/css/contact_us.css
@@ -60,3 +60,9 @@ hr {
     height: 300px;
   }
 }
+
+@media (max-width: 813px) {
+  .content {
+    height: 100%;
+  }
+}
